@@ -1,6 +1,9 @@
 Release 1.0.6 (in development)
 ==============================
 
+* #570: Try decoding ``-D`` and ``-A`` command-line arguments with
+  the locale's preferred encoding.
+
 * #528: Observe :confval:`locale_dirs` when looking for the JS
   translations file.
 
